Made user links active

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<dt>Score</dt>
 				<dd class="answerer-score"></dd>
 			<dt>Answerer's link</dt>
-				<dd class="answerer-link"><a href="" target="_blank"></a></dd>
+				<dd><a class="answerer-link" href="" target="_blank"></a></dd>
 			
 		</dl>
 		<div class="error">
